--- a/.github/workflows/woo-page-deploy.yml
+++ b/.github/workflows/woo-page-deploy.yml
@@ -11,6 +11,7 @@ env: # Change these to your preferences any image url can also be a base encoded
   JUMBOTRON_IMAGE_URL: "https://gemeente.leiden.nl/middelen/user-upload/sterrenwacht-en-boot-op-wittesingel-van-hielco-kuipers.jpg"
   FOOTER_LOGO_URL: "https://gemeente.leiden.nl/typo3conf/ext/leiden_template/Resources/Public/Images/logo_leiden.svg"
   FOOTER_LOGO_HREF: "https://gemeente.leiden.nl/"
+  OIDN_NUMBER: ""
 
 on:
   push:
@@ -41,6 +42,7 @@ jobs:
           envkey_GATSBY_JUMBOTRON_IMAGE_URL: ${{ env.JUMBOTRON_IMAGE_URL }}
           envkey_GATSBY_FOOTER_LOGO_URL: ${{ env.FOOTER_LOGO_URL }}
           envkey_GATSBY_FOOTER_LOGO_HREF: ${{ env.FOOTER_LOGO_HREF }}
+          envkey_GATSBY_OIDN_NUMBER: ${{ env.OIDN_NUMBER }}
           directory: pwa/static
           file_name: .env.production
           fail_on_empty: true
