--- a/.github/workflows/woo-page-deploy.yml
+++ b/.github/workflows/woo-page-deploy.yml
@@ -10,8 +10,8 @@ env: # Change these to your preferences any image url can also be a base encoded
   API_BASE_URL: "https://api.gateway.commonground.nu/api"
   NL_DESIGN_THEME_CLASSNAME: "leiden-theme"
   DEV_ENVIRONMENT: "true"
-  SHOW_CATEGORY: "false"
-  SHOW_ORGANIZATION: "false"
+  SHOW_CATEGORY: "true"
+  SHOW_ORGANIZATION: "true"
   FAVICON_URL: "https://gemeente.leiden.nl/typo3conf/ext/leiden_template/Resources/Public/Images/favicon/favicon-96x96.png"
   HEADER_LOGO_URL: "https://gemeente.leiden.nl/typo3conf/ext/leiden_template/Resources/Public/Images/logo_leiden.svg"
   ORGANISATION_NAME: "Leiden"
